crates/ignis_analyzer/tests/snapshots/golden_ok__type_alias_basic_diags.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_diagnostics(&result.output.diagnostics)"
---
[WARN] A0122: unused variable 'x'
  at Id { index: 0, _phantom: PhantomData<fn() -> ignis_type::file::SourceFile> }:46-62
