crates/ignis_analyzer/tests/snapshots/golden_ok__type_alias_basic_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): void
  body:
    Block : never
      statements:
        Let(x) : void
          init:
            Literal(Int32(42)) : i32
        Return : never

--- Variable Initializers ---

x: i32 = Literal(Int32(42))
