crates/ignis_analyzer/tests/snapshots/golden_ok__type_alias_in_function_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn add(a: i32, b: i32): i32
  body:
    Block : never
      statements:
        Return : never
          Binary(Add) : i32
            left:
              Variable(a [param]) : i32
            right:
              Variable(b [param]) : i32
