crates/ignis_analyzer/tests/snapshots/golden_ok__unicode_scalar_char_literal_round_trips_through_analysis_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn echo(value: char): char
  body:
    Block : never
      statements:
        Return : never
          Variable(value [param]) : char

fn main(): i32
  body:
    Block : never
      statements:
        Let(heart) : void
          init:
            Call(echo) : char
              args:
                [0]:
                  Literal(Char(10084)) : char
        Return : never
          Cast(-> i32) : i32
            Variable(heart) : char

--- Variable Initializers ---

heart: char = Call(echo) { Literal(Char(10084)) }
