crates/ignis_analyzer/tests/snapshots/golden_ok__unit_value_typechecks_in_result_argument_and_return_positions_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn consumeVoid(value: void): void
  body:
    Block : never
      statements:
        Return : never

fn makeResult(): Result<void, bool>
  body:
    Block : never
      statements:
        ExprStmt : void
          Call(consumeVoid) : void
            args:
              [0]:
                Unit : void
        Return : never
          EnumVariant(Result::0) : Result<void, bool>
            [0]:
              Unit : void
