crates/ignis_analyzer/tests/snapshots/golden_ok__while_loop_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
assertion_line: 121
expression: "common::format_hir(&result)"
---
=== HIR ===


--- Definitions ---

fn count(): i32
  body:
    Block : never
      statements:
        Let(i [mut]) : void
          init:
            Literal(Int32(0)) : i32
        Loop(while) : void
          cond:
            Binary(LessThan) : bool
              left:
                Variable(i [mut]) : i32
              right:
                Literal(Int32(10)) : i32
          body:
            Block : i32
              statements:
                ExprStmt : i32
                  Assign(=) : i32
                    target:
                      Variable(i [mut]) : i32
                    value:
                      Binary(Add) : i32
                        left:
                          Variable(i [mut]) : i32
                        right:
                          Literal(Int32(1)) : i32
        Return : never
          Variable(i [mut]) : i32

--- Variable Initializers ---

i: i32 [mut] = Literal(Int32(0))
