crates/ignis_analyzer/tests/snapshots/golden_ok__widening_implicit_i8_to_i64_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): void
  body:
    Block : never
      statements:
        Let(a) : void
          init:
            Literal(Int32(10)) : i8
        Let(b) : void
          init:
            Variable(a) : i8
        Return : never

--- Variable Initializers ---

a: i8 = Literal(Int32(10))
b: i64 = Variable(a)
