crates/ignis_analyzer/tests/snapshots/golden_ok__widening_implicit_u8_to_u32_hir.snap
---
source: crates/ignis_analyzer/tests/golden_ok.rs
expression: "common::format_hir(&result)"
---
=== HIR ===

Entry Point: main

--- Definitions ---

fn main(): void
  body:
    Block : never
      statements:
        Let(a) : void
          init:
            Literal(Int32(10)) : u8
        Let(b) : void
          init:
            Variable(a) : u8
        Return : never

--- Variable Initializers ---

a: u8 = Literal(Int32(10))
b: u32 = Variable(a)
